NewFlameHM/force-app/main/default/objects/Menu_Order__c/Menu_Order__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <label>Menu Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>