NewFlameHM/force-app/main/default/objects/Menu_Order__c/fields/Menu_Id__c.field-meta.xml
<CustomField>
    <fullName>Menu_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Menu Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Menu__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Menu__c</referenceTo>
    <relationshipName>Menu_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>