NewFlameHM/force-app/main/default/objects/Menu_Order__c/fields/Mess__c.field-meta.xml
<CustomField>
    <fullName>Mess__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mess</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mess</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Menu_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>