NewFlameHM/force-app/main/default/objects/Menu_Order__c/fields/Name_Of_The_Meal__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_The_Meal__c</fullName>
    <label>Name Of The Meal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>