NewFlameHM/force-app/main/default/objects/Menu_Order__c/fields/Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Menu_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>