NewFlameHM/force-app/main/default/objects/Menu_Order__c/recordTypes/Daily_Menu.recordType-meta.xml
<RecordType>
    <fullName>Daily_Menu</fullName>
    <active>true</active>
    <label>Daily Menu</label>
</RecordType>