NewFlameHM/force-app/main/default/objects/Menu_Order__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <label>Template</label>
</RecordType>