NewFlameHM/force-app/main/default/objects/Menu_Order__c/listViews/Daily_Menu.listView-meta.xml
<ListView>
    <fullName>Daily_Menu</fullName>
    <columns>NAME</columns>
    <columns>Mess__c</columns>
    <columns>Day__c</columns>
    <columns>Type__c</columns>
    <columns>Item__c</columns>
    <columns>Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Menu_Order__c.Daily_Menu</value>
    </filters>
    <label>Daily Menu</label>
</ListView>